--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A js library to create immutable value objects",
   "main": "src",
   "scripts": {
-    "test": "./node_modules/.bin/jest --watchAll ./src",
+    "test": "./node_modules/.bin/jest ./src --coverage --watchAll",
     "test-travis": "./node_modules/.bin/jest ./src --coverage"
   },
   "author": "Daniele Mariani",
