--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test-travis": "./node_modules/.bin/jest ./src --coverage"
   },
   "author": "Daniele Mariani",
-  "license": "ISC",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/danielemariani/value-objects"
