--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/danielemariani/value-objects"
+    "url": "https://github.com/danielemariani/value-objects.git"
   },
   "devDependencies": {
     "coveralls": "^2.13.1",
